2009-12-26 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSCell.m: Corrected c99-ism

2009-12-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-dealloc, -breakUndoCoalescing,
	-shouldChangeTextInRange:replacementString:): Implement coalescing
	of undo actions for typing events.

	* Source/NSTextView.m (-selectedRange): Prevent crash when the
	receiver has no layout manager.

2009-12-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTableView.m (-mouseDown:): A single click into a cell
	of an unselected row can now change the cell's state even when the
	table view allows dragging.

2009-12-22 17:31-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSCell.m: Corrected documentation in GUI to reflect that
	this does nothing in the default implementation, according to spec.

2009-12-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m (-validateUserInterfaceItem):
	* Source/NSWindow.m (-validateMenuItem): Generalize user interface
	validation for NSWindow.

	* Source/NSWindow.m (-undo:, -redo:): Use the first responder's
	undo manager if available. Avoids the need for overriding these
	methods in any responder class which supports undo/redo and is
	compatible with OS X.

2009-12-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAlert.m (makeScrollViewWithRect):
	* Source/NSAlert.m (-sizePanelToFit): If the message text is too
	wide to fit into the panel wrap its text to the scroll view's
	width.

	* Source/NSAlert.m (-sizePanelToFit): Limit the width and height
	of an alert panel to 60% of the screen's width and height,
	respectively.

2009-12-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSScrollView.m (-isOpaque): Fix bug where an NSScrollView
	incorrectly claimed to be opaque while its clip view is not.

	* Source/NSOpenPanel.m (-setCanChooseDirectories): Reset the
	current selection of an open panel when directory selection is
	disabled. This prevents bogus directories being returned from the